--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
-    "mongosh": "^1.10.3"
+    "mongosh": "^1.10.3",
+    "ws": "^8.13.0"
   }
 }
