--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.3"
+    "react-icons": "^4.10.1",
+    "tailwindcss": "^3.3.3",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
